--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/src/fonts/OpenSans-Regular.ttf') format('truetype');
+  font-weight: 400;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/src/fonts/OpenSans-Medium.ttf') format('truetype');
+  font-weight: 500;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/src/fonts/OpenSans-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/src/fonts/OpenSans-Bold.ttf') format('truetype');
+  font-weight: 700;
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
