--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+@layer base {
+  :root {
+    --radius: 0.5rem;
+  }
+}
